plugins {
	id 'org.springframework.boot' version '2.4.1'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.shubh'
version = '1.0.1'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	compile "com.google.zxing:core:3.3.0"
	compile 'com.google.zxing:javase:3.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

task makePretty(type: Delete) {
  delete "${buildDir}/BarcodeReader", "${buildDir}/toPackage", "${buildDir}/jruntime"
}

task copyFiles(type: Copy) {
	dependsOn bootJar
    from /*"resources",*/ "$buildDir/libs"
    into "$buildDir/toPackage"
}

task genJre(type: Exec) {
	workingDir="${buildDir}"
	commandLine 'cmd', '/c', "jlink --add-modules java.base,java.desktop,java.logging,java.naming,java.management,java.instrument,java.security.jgss --output jruntime --strip-debug --no-header-files --no-man-pages --strip-native-commands --compress 2"
}

task pack(type: Exec) {
	dependsOn makePretty
	dependsOn copyFiles
	dependsOn genJre
	workingDir="${buildDir}"
	commandLine 'cmd', '/c', "jpackage --type app-image -n BarcodeReader -i toPackage --main-jar BarcodeReader-1.0.1.jar --icon ../resources/logo_br.ico --runtime-image jruntime"
	//"jpackage --type app-image --app-version 1.0.1 --description 'Barcode Reader Server Companion' --name BarcodeReader -i toPackage --main-jar BarcodeReader-1.0.1.jar --icon toPackage/logo_br.ico"
}

copyFiles.mustRunAfter(makePretty)
genJre.mustRunAfter(copyFiles)